# 2FA_CLI

./: CMakeLists.txt  Developing a 2FA-CLI tool with C++.md  InputParser.h  InvalidArgumentsException.h  Key.h  NotImplementedException.h  Options.cpp  Options.h  README.md  TokenGenerator.cpp  TokenGenerator.h  UnknownSituationException.h  main.cpp  options.h
include/cryptlite/: sha256.h
